name:                youtube-tool
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mnn/youtube-tool#readme
license:             GPL3
license-file:        LICENSE
author:              monnef
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable youtube-tool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base == 4.9.*
                     , youtube-tool
                     , process == 1.4.*
                     , directory == 1.3.*
                     , regex-pcre == 0.94.*
                     , MissingH == 1.4.*
                     , filepath == 1.4.*
                     , Hclip == 3.0.*
  default-language:    Haskell2010

test-suite youtube-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , youtube-tool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mnn/youtube-tool
